# Boto_Test

./: README.md  fastapi.db  pyproject.toml
src/: main.py
src/api/: routers.py
src/api/endpoints/: __init__.py  url_map.py
src/core/: config.py
src/db/: conn.py
src/schemas/: urlmap.py
src/services/: db_init.py  urlmap.py
src/tests/: conftest.py  test_url_api.py
