[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Илья Ватютов",email = "vatut007@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.128.6,<0.129.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "src", from = "boto_test"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
